--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										
 										<article>
 											<h4>Weekly Cohort Retention Analysis for Subscription Churn  |  SQL, PowerBI </h4>
-											<a href="images\CohortsRetention.pdf" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="images/pic07.jpg" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<div class="inner">
 												<p>I analyzed subscription churn on a weekly cohort basis to uncover early retention patterns.<br>
 												 Using SQL in BigQuery, I grouped users by subscription start week and tracked retention from Week 0 to Week 6.<br>
@@ -128,7 +128,7 @@
 										</article>
 										<article>
 											<h4>Sales Performance Dashboard Development (AdventureWorks)  |  SQL, PowerBI  </h4>
-											<a href="images\PowerBI Visualization Project.pdf" class="image"><img src="images/pic033.jpg" alt="" /></a>
+											<a href="images/pic033.jpg" class="image"><img src="images/pic033.jpg" alt="" /></a>
 											<div class="inner">
 												<p>Designed and deployed a dynamic, automated sales dashboard in Power BI, integrating SQL-based datasets to deliver KPIs, trend analysis, and actionable insights for the Sales Director.</p>
 												<ul class="actions special">
